logs/Slang/chapter-8/8.18--var_protected.sv.log
name: var_protected
description: class with protected variable
should_fail: 0
tags: 8.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.18--var_protected.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.18--var_protected.sv:8:2: error: language feature not yet supported
	class a_cls;
	^~~~~~~~~~~~
